--- a/src/components/pages/game/Game.css
+++ b/src/components/pages/game/Game.css
@@ -1,13 +1,13 @@
-.Game {
+.Day {
     text-align: center;
 }
 
-.Game-logo {
+.Day-logo {
     animation: Day-logo-spin infinite 20s linear;
     height: 40vmin;
 }
 
-.Game-header {
+.Day-header {
     background-color: #282c34;
     min-height: 100vh;
     display: flex;
@@ -18,11 +18,11 @@
     color: white;
 }
 
-.Game-link {
+.Day-link {
     color: #61dafb;
 }
 
-@keyframes Game-logo-spin {
+@keyframes Day-logo-spin {
     from {
         transform: rotate(0deg);
     }
